[frontend/backend] Fixes following PR comments